[package]
name = "osu-db"
version = "0.1.0"
authors = ["negamartin"]
edition = "2018"

# Crates.io package info
description = "Reading and writing of osu! binary files: `osu!.db`, `collection.db`, `scores.db` and `.osr` replay files."
repository = "https://github.com/negamartin/osu-db"
readme = "README.md"
keywords = ["osu"]
categories = ["encoding", "parser-implementations"]
license = "Unlicense"

[workspace]
members = ["conv"]

[dependencies]
nom = "4"
chrono = "0.4"
bit = "0.1"
failure = "0.1"

serde = { version = "1", optional = true }
serde_derive = { version = "1", optional = true }

xz2 = { version = "0.1", optional = true }

[features]
default = ["compression"]
# Provides serde integration.
ser-de = ["serde", "serde_derive", "chrono/serde"]
# Provides replay data decompression and further parsing.
compression = ["xz2"]
