[package]
name = "osu-db"
version = "0.3.0"
authors = ["negamartin"]
edition = "2018"

# Crates.io package info
description = "Reading and writing of osu! binary files: `osu!.db`, `collection.db`, `scores.db` and `.osr` replay files."
readme = "README.md"
repository = "https://github.com/negamartin/osu-db"
license = "Unlicense"
keywords = ["osu"]
categories = ["encoding", "parser-implementations"]
include = ["Cargo.toml", "src", "LICENSE"]

[workspace]
members = ["conv"]

[dependencies]
nom = "7"
chrono = "0.4"

serde = { version = "1", optional = true }
serde_derive = { version = "1", optional = true }

xz2 = { version = "0.1", optional = true }

[features]
default = ["compression"]
# Provides serde integration.
ser-de = ["serde", "serde_derive", "chrono/serde"]
# Provides replay data decompression and further parsing.
compression = ["xz2"]
